--- a/ResourceCompetition/ResourceCompetition/Views/Home/Index.cshtml
+++ b/ResourceCompetition/ResourceCompetition/Views/Home/Index.cshtml
@@ -9,16 +9,22 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
-    <script
-        src="https://code.jquery.com/jquery-2.2.4.min.js"
-        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+            crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
     <script src="../../Scripts/skech.js"></script>
 </head>
 <body>
-    <div> 
+    <div>
+        <div id="draw" style="display: inline-block;"></div>
+        <div style="display: inline-block;">
+            <button onclick="initCall()">Init</button>
+        </div>
     </div>
+    <script>
+
+    </script>
 </body>
 </html>
