initial results view

--- a/ResourceCompetition/ResourceCompetition/Views/Home/Index.cshtml
+++ b/ResourceCompetition/ResourceCompetition/Views/Home/Index.cshtml
@@ -17,11 +17,18 @@
     <script src="../../Scripts/skech.js"></script>
 </head>
 <body>
-    <div>
+    <div style="display: flex;">
         <div id="draw" style="display: inline-block;"></div>
         <div style="display: inline-block;">
-            <button onclick="initCall()">Init</button>
+            <div>
+                <button onclick="initCall()">Init</button>
+            </div>
+            <div id="results">
+                Bla
+
+            </div>
         </div>
+
     </div>
     <script>
 
